<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/gender_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:text="@string/male_text" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:text="@string/female_text" />
        </RadioGroup>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/years_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="4"
        android:rowCount="1">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/height_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />


    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="4"
        android:rowCount="1">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/weight_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />


    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/exercise_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/planets_spinner"
            android:layout_width="200dp"
            android:layout_height="40dp" />
    </GridLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#FFFF00"
        android:onClick="calculateBMR"
        android:text="@string/calculate_text" />

</LinearLayout>